# http-server-c

./: CMakeLists.txt  Dockerfile  Makefile  README.md
html/: index.html
include/: handle_client.h
scripts/: docker.sh
src/: handle_client.c  handle_client.h  main.c  network.c  network.h  sig_utils.c
